# my-service-bus-abstractions

./: Cargo.toml
.github/workflows/: tests.yaml
src/: abstractions.rs  errors.rs  lib.rs  message_id.rs  message_to_publish.rs  my_sb_message.rs  publisher.rs  publisher_with_retries.rs
src/publisher/: mod.rs  my_telemetry.rs  publisher.rs  serializer.rs
src/publisher/with_internal_queue/: publisher_with_internal_queue.rs
src/queue_with_intervals/: iterator.rs  queue_index_range.rs  queue_with_intervals.rs  split_queue.rs
src/subscriber/: delivered_message.rs  deserializer.rs  messages_reader.rs  mod.rs  my_sb_callback.rs  subscriber.rs  subscriber_callback.rs
